# b4-thesis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Bachelor2025_Yoshida/: .gitignore  Bachelor2025_Yoshida.tex  resume_sample.tex  yoshida_refs.bib
docs/: PERFORMANCE.md  data_format.md  implementation_design.md  implementation_overview.md  method_tracking_analysis.md  task_breakdown.md  test_strategy.md
scripts/: analyze_deletion_patterns.py  benchmark_final.py  clone_report_parser.py  deep_contextual_analysis.py  find_delete_file.py  generate_final_report.py  llm_feature_extractor.py  method_tracking.py  refactoring_miner.py  setup_repository.sh
src/b4_thesis/: __init__.py  cli.py
src/b4_thesis/analysis/: __init__.py  clone_group_tracker.py  code_extractor.py  group_detector.py  group_matcher.py  lsh_index.py  match_filters.py  match_strategies.py  match_types.py  matching_constants.py  method_matcher.py  method_tracker.py  refactoring_analyzer.py  report_generator.py  revision_labeler.py  similarity.py  state_classifier.py  stats_presenter.py  tracking_stats.py  union_find.py  (+1 more)
tests/: __init__.py  test_cli.py
tests/analysis/: test_clone_group_tracker.py  test_code_extractor.py  test_data_validator.py  test_group_detector.py  test_group_matcher.py  test_lsh_index.py  test_method_matcher.py  test_method_tracker.py  test_report_generator.py  test_revision_labeler.py  test_similarity.py  test_state_classifier.py  test_stats_presenter.py  test_tracking_stats.py  test_union_find.py
tests/commands/: test_convert.py  test_deletion.py  test_label.py  test_report.py  test_stats.py  test_track.py  test_visualize.py
tests/core/: test_revision_manager.py
tests/integration/: __init__.py  test_end_to_end.py  test_real_data_validation.py
writing/: IPSJ_SIGSE202603_Yoshida.tex  ipsj.cls  ipsjpref.sty  ipsjsort.bst  ipsjtech.sty  ipsjunsrt.bst  resume.tex  yoshida_refs.bib
(+100 files in other folders)
