[project]
name = "b4-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "networkx>=3.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydash>=8.0.5",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "openpyxl>=3.1.5",
    "datasketch>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pytest>=8.0.0",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
b4-thesis = "b4_thesis.cli:main"

[tool.ruff]
# Exclude commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["b4_thesis"]
force-sort-within-sections = true

[tool.pytest.ini_options]
markers = [
    "ci: marks tests as CI-only (deselect with '-m \"not ci\"')",
]
